# book-to-audiovideo

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.agents/: AGENTS.md
data/input/: test-libro-tts-extra.docx  test-libro-tts.docx
data/output/2004a42bcb5149cebe31116203013d0b/: 01_ingestion.json  02_cleanup.json  03_chunks.json  04_segments.json  05_speakers.json  state.json
data/output/28843d9213554877be567e3442699790/: 01_ingestion.json  state.json
data/output/35e30999e8ef49ee9db338a7713f8086/: 01_ingestion.json  02_cleanup.json  04_segments.json  05_speakers.json  state.json
data/output/437eda8e8d4046bfb4fd03e6d970bf7d/: 01_ingestion.json  02_cleanup.json  04_segments.json  05_speakers.json  06_voice_assignments.json  07_segment_enrichment.json  10_downloaded_media.json  11_tts_outputs.json  12_mixed_audio.json  13_final_video.json  (+3 more)
scripts/: download_dependencies.sh  run_pipeline.py
src/book_to_audiovideo/: __init__.py  config.py  main.py
src/book_to_audiovideo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_chunking.py  test_cleanup.py  test_dialogue_segmentation.py  test_elevenlabs_client.py  test_ffmpeg_service.py  test_groq_client.py  test_llm_pipeline_agents.py  test_media_fetch_agent.py  test_media_planning.py  test_orchestrator.py  test_pixabay_client.py  test_pronunciation.py  test_qa_agent.py  test_segment_enrichment.py  test_tone_tagging.py  test_tts_agent.py  test_voice_assignment.py  test_web_app.py
tests/fixtures/: sample_book.txt  sample_manifest.json
(+107 files in other folders)
