[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "book-to-audiovideo"
version = "0.1.0"
description = "Pipeline locale per trasformare libri in video narrati con provider API esterni."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.3.4",
  "httpx>=0.27.0",
  "groq>=0.31.0",
  "tenacity>=8.5.0",
  "orjson>=3.10.7",
  "python-docx>=1.1.2",
  "pypdf>=4.3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
]

[project.scripts]
book-to-audiovideo = "book_to_audiovideo.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
